@@ -1,3 +1,13 @@
+2007-03-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-make-temp-file): New parameter FILENAME.  Append
+	its extension to the resulting temporary file name.
+	(tramp-handle-file-local-copy, tramp-handle-write-region): Apply
+	it.
+
+	* tramp-smb.el (tramp-smb-handle-file-local-copy)
+	(tramp-smb-handle-write-region): Apply it.
+
 2007-02-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-get-ls-command, tramp-get-file-exists-command)
